<resources>
    <string name="app_name">Explore GARDEN</string>
    <string name="app_logo">App Logo</string>
    <string name="wecome_title">Explore Garden</string>

    <string name="Welcome_info">Find location, do shopping, speak your mind - give your opinion, we care about that</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="welcome_line">WELCOME, we are happy to have you here.</string>
    <string name="log_in_page_title">Explore GARDEN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_account_forget_pass">Create Account | Forgot Password?</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
