<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/welcomeImg"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:contentDescription="@string/app_logo"
        android:paddingLeft="80dp"
        android:paddingTop="150dp"
        android:paddingRight="80dp"
        android:paddingBottom="80dp"
        app:srcCompat="@drawable/welcome_logo" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:text="@string/wecome_title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15sp"
        android:text="@string/Welcome_info" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/get_started" />

</LinearLayout>

